--- a/index.html
+++ b/index.html
@@ -4,31 +4,36 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=4f7f38cc189f8d7ddb803af209ebf22c">
+    <title>ViLabs-We challenge innovations</title>
+    <link rel="icon" type="image/png" sizes="130x124" href="assets/img/157small.eps.png">
+    <link rel="icon" type="image/png" sizes="130x124" href="assets/img/157small.eps.png">
+    <link rel="icon" type="image/png" sizes="130x124" href="assets/img/157small.eps.png">
+    <link rel="icon" type="image/png" sizes="130x124" href="assets/img/157small.eps.png">
+    <link rel="icon" type="image/png" sizes="130x124" href="assets/img/157small.eps.png">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css?h=23ff7d4d53fe4a548666cfdecd996594">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
 <body id="page-top">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">Vilabs</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
+        <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/157small.eps.png" style="width: 42px;margin: 0px 10px 0px 0px;">Vilabs</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right"
+                type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#technologies">Technologies</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header class="masthead text-center text-white d-flex" style="background-image:url('assets/img/header.jpg?h=1e0a2a51dfb134a58fe757975cbbf111');">
+    <header class="masthead text-center text-white d-flex" style="background-image:url('assets/img/header.jpg');">
         <div class="container my-auto">
             <div class="row">
                 <div class="col-lg-10 mx-auto">
@@ -114,40 +119,55 @@
                 </div>
             </div>
         </div>
-        <div class="container" style="padding: 42px;">
+    </section>
+    <section id="technologies" style="padding: 12px 122px 122px 12px;">
+        <div class="container">
             <div class="row">
-                <div class="col">
-                    <h1 class="text-center">Our Clients</h1>
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Technology we Use</h2>
+                    <hr class="my-4">
                 </div>
             </div>
+        </div>
+        <div class="container">
             <div class="row">
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col-md-6 col-lg-3 text-center" style="padding: 47px;"><img src="assets/img/aTJckeF3JKZBg0dTVTC5pJLQ9.png" style="width: 185px;height: 150px;padding: 0px;"></div>
+                <div class="col-md-6 col-lg-3 text-center"><img src="assets/img/c5XC3XU6xKPk5gs1XLHJ6PyaQ.png" style="width: 134px;height: 153px;padding: 0px;margin: 8px;"></div>
+                <div class="col-md-6 col-lg-3 text-center"><img src="assets/img/hwPtSwHqfR8kxw45yQmJfJQp7.png" style="width: 134px;height: 134px;padding: 0px;margin: 23px;"></div>
+                <div class="col-md-6 col-lg-3 text-center"><img src="assets/img/FQ2FJZNqn0KyLAVpK7pCbTYaw.png" style="width: 223px;height: 116px;padding: 0px;margin: 40px;"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-3 text-center"><img src="assets/img/NcwK5A7x84YieaADQpSJZGxaF.png" style="width: 163px;height: 132px;padding: 0px;margin: 61px;"></div>
+                <div class="col-md-6 col-lg-3 text-center"><img src="assets/img/RnbYSbwQifWmeE95HmnMKvST8.png" style="width: 162px;height: 188px;padding: 0px;margin: 41px;"></div>
+                <div class="col-md-6 col-lg-3 text-center"><img src="assets/img/YeiGJ4UZ9TZSRxyiqXNKQSKu5.png" style="width: 234px;height: 90px;padding: 0px;margin: 70px 16px 0px 0px;"></div>
+                <div class="col-md-6 col-lg-3 text-center"><img src="assets/img/WScCWKdEJsSgCP7SaXHVJ7Cuj.png" style="width: 134px;height: 133px;padding: 0px;margin: 58px;"></div>
+                <div class="col-md-6 col-lg-3 text-center"><img src="assets/img/vFaDz5QjZfSap7F8Pj9xC64CK.png" style="width: 134px;height: 133px;padding: 0px;margin: 58px;"></div>
+                <div class="col-md-6 col-lg-3 text-center"><img src="assets/img/p2hKmaGQnaBAvak1qtDG62Ds2.png" style="width: 134px;height: 133px;padding: 0px;margin: 58px;"></div>
+                <div class="col-md-6 col-lg-3 text-center"><img src="assets/img/CMPN4UNrrZUMvUTkmbJDgFtzp.png" style="width: 134px;height: 133px;padding: 0px;margin: 58px;"></div>
             </div>
         </div>
     </section>
-    <section id="portfolio" class="p-0">
-        <div class="container-fluid p-0">
-            <div class="row no-gutters popup-gallery">
-                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/1.jpg?h=f9b3465df27ab0c03ad2ead928dcd277"><img class="img-fluid" src="assets/img/thumbnails/1.jpg?h=56a68e7dda0ccee51a3ee9052291ff82"><div class="portfolio-box-caption"><div class="portfolio-box-caption-content"><div class="project-category text-faded"><span>Category</span></div><div class="project-name"><span>Project Name</span></div></div></div></a></div>
-                <div
-                    class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/2.jpg?h=360a49604f1ae10f7094cfaeb4d8c473"><img class="img-fluid" src="assets/img/thumbnails/2.jpg?h=13bb24b9c927c681b136f2567e30fbca"><div class="portfolio-box-caption"><div class="portfolio-box-caption-content"><div class="project-category text-faded"><span>Category</span></div><div class="project-name"><span>Project Name</span></div></div></div></a></div>
-            <div
-                class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/3.jpg?h=d6098215d39d0388769070c9f6ad33d6"><img class="img-fluid" src="assets/img/thumbnails/3.jpg?h=fc435652d8c9712aef952a590f88ca1f"><div class="portfolio-box-caption"><div class="portfolio-box-caption-content"><div class="project-category text-faded"><span>Category</span></div><div class="project-name"><span>Project Name</span></div></div></div></a></div>
-        <div
-            class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/4.jpg?h=d3a7a42dcc1b089b2f17eb6cc3ea4be2"><img class="img-fluid" src="assets/img/thumbnails/4.jpg?h=dd526fbc875cf237b82b503347a6fb3b"><div class="portfolio-box-caption"><div class="portfolio-box-caption-content"><div class="project-category text-faded"><span>Category</span></div><div class="project-name"><span>Project Name</span></div></div></div></a></div>
-            <div
-                class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/5.jpg?h=9d1710f81e326a0ea0477045f0e5abb6"><img class="img-fluid" src="assets/img/thumbnails/5.jpg?h=e9a0ccae602ba1211c489fc64bfa72f4"><div class="portfolio-box-caption"><div class="portfolio-box-caption-content"><div class="project-category text-faded"><span>Category</span></div><div class="project-name"><span>Project Name</span></div></div></div></a></div>
-                <div
-                    class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/6.jpg?h=1edece308118e9a87243d6ea211f86ce"><img class="img-fluid" src="assets/img/thumbnails/6.jpg?h=e69534c0f62e0b0ac301e6832430eaab"><div class="portfolio-box-caption"><div class="portfolio-box-caption-content"><div class="project-category text-faded"><span>Category</span></div><div class="project-name"><span>Project Name</span></div></div></div></a></div>
-                    </div>
-                    </div>
-    </section>
-    <section class="bg-dark text-white">
+    <section class="bg-dark text-white" style="padding: 80px;">
         <div class="container text-center">
-            <h2 class="mb-4">Meet <strong><em>Slorge</em></strong>&nbsp;our Own Product&nbsp;</h2><a class="btn btn-light btn-xl sr-button" role="button" data-aos="zoom-in" data-aos-duration="400" data-aos-once="true" href="#">Live Demo</a></div>
+            <div class="row">
+                <div class="col"><img src="assets/img/slorge1.png"></div>
+                <div class="col-8">
+                    <h2 class="mb-4">Meet <strong><em>Slorge</em></strong>&nbsp;our Own Product&nbsp;</h2>
+                    <div class="row">
+                        <div class="col">
+                            <blockquote class="blockquote">
+                                <p class="mb-0"><em>Share Collaborate and learn at Slorge</em></p>
+                                <footer class="blockquote-footer">Made for eternal learner in you</footer>
+                            </blockquote>
+                        </div>
+                        <div class="col-xl-12">
+                            <p>An social online learning and engagement plaform where you can post you ideas ,stories and projects</p>
+                        </div>
+                        <div class="col"><a class="btn btn-light btn-xl sr-button" role="button" data-aos="zoom-in" data-aos-duration="400" data-aos-once="true" href="https://slorge.ml" target="_blank">Live Demo</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <section id="contact">
         <div class="container">
@@ -168,12 +188,12 @@
             </div>
         </div>
     </section>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
-    <script src="assets/js/script.min.js?h=3f23941bb0cc9465e8e4a684c85b40a7"></script>
+    <script src="assets/js/script.min.js"></script>
 </body>
 
 </html>
