--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>ViLabs-We challenge innovations</title>
+    <title>Vilabs-We Challenge Innovation</title>
     <link rel="icon" type="image/png" sizes="130x124" href="assets/img/157small.eps.png">
     <link rel="icon" type="image/png" sizes="130x124" href="assets/img/157small.eps.png">
     <link rel="icon" type="image/png" sizes="130x124" href="assets/img/157small.eps.png">
@@ -59,8 +59,8 @@
     <section id="services">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                <div class="col-12 col-lg-12 text-center">
+                    <h2 class="text-center section-heading">At Your Service</h2>
                     <hr class="my-4">
                 </div>
             </div>
@@ -120,11 +120,11 @@
             </div>
         </div>
     </section>
-    <section id="technologies" style="padding: 12px 122px 122px 12px;">
-        <div class="container">
+    <section id="technologies">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Technology we Use</h2>
+                <div class="col-12 col-lg-12 text-center">
+                    <h2 class="text-center section-heading">Technology we Use</h2>
                     <hr class="my-4">
                 </div>
             </div>
@@ -147,11 +147,11 @@
             </div>
         </div>
     </section>
-    <section class="bg-dark text-white" style="padding: 80px;">
-        <div class="container text-center">
+    <section class="bg-dark text-white" style="padding: 80px 0px;">
+        <div class="container-fluid text-center">
             <div class="row">
-                <div class="col"><img src="assets/img/slorge1.png"></div>
-                <div class="col-8">
+                <div class="col-xl-4"><img src="assets/img/slorge1.png"></div>
+                <div class="col">
                     <h2 class="mb-4">Meet <strong><em>Slorge</em></strong>&nbsp;our Own Product&nbsp;</h2>
                     <div class="row">
                         <div class="col">
