--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="col offset-lg-8 mx-auto text-center">
                     <h2 class="text-white section-heading">We've got what you need!</h2>
                     <hr class="light my-4">
-                    <p class="text-faded mb-4">ViLabs has everything you need to kick start your new innovation in no time! All of the technologies we we use are trending and desirable and easy to use. We give equal imporatnce to user interface and experience.</p><a class="btn btn-light btn-xl js-scroll-trigger"
+                    <p class="text-faded mb-4">ViLabs has everything you need to kick start your new innovation in no time! All technologies  we use are trending and desirable and easy to use. We give equal imporatnce to user interface and experience.</p><a class="btn btn-light btn-xl js-scroll-trigger"
                         role="button" href="#services">Get Started!</a></div>
             </div>
         </div>
