--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Vilabs-We Challenge Innovation</title>
+    <title>Vorac Innovation Labs (vilabs)-We Challenge Innovation</title>
     <link rel="icon" type="image/png" sizes="130x124" href="assets/img/157small.eps.png">
     <link rel="icon" type="image/png" sizes="130x124" href="assets/img/157small.eps.png">
     <link rel="icon" type="image/png" sizes="130x124" href="assets/img/157small.eps.png">
